sucessfully commit and push

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jhansi123-1482474926993</name>
+	<name>Copy of jhansi123-1482474926993</name>
 	<comment></comment>
 	<projects>
 	</projects>
